js/js.translator/testData/incremental/invalidation/toplevelPropertiesWithCrossModuleInliner/lib2/l2.0.kt
fun testToplevelProperties(): Int {
    return globalValWrapper().toInt()
}
